cmake_minimum_required (VERSION 3.0)
project (cfg)

set(SOURCES cfg.cpp cfg_impl.cpp mbr.cpp app.cpp)
if (NOT CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
  set (SOURCES ${SOURCES} cbr.cpp)
endif ()
add_library(cfg SHARED ${SOURCES})
find_package(DynamoRIO REQUIRED)
configure_DynamoRIO_client(cfg)
use_DynamoRIO_extension(cfg "drmgr")
use_DynamoRIO_extension(cfg "droption")
set(CMAKE_CXX_FLAGS "-std=c++14")
